2d stabilize keys not visible in the Graph Editor and Dope Sheet #49571

Closed
opened 2016-10-04 21:06:30 +02:00 by Michael P. · 6 comments

System Information
System: Windows 7 64bit
RAM: 4096 MB
renderer: 'GeForce GTX 760/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 364.72'

Blender Version
Broken: 2.78
Worked: (optional)

Short description of error
2d stabilize keys not visible in the Graph Editor and Dope Sheet

Exact steps for others to reproduce the error
To make the new features of the 2d stabilizer work, some settings can be animated,
like the 'influence' of location, scale and rotation.

But if a key is set, it doesn't show up in the Graph Editor nor the Dope Sheet, like
for example a key that is set in the compositor.

2d-stabilize-keys-not-visible.jpg

**System Information** System: Windows 7 64bit RAM: 4096 MB renderer: 'GeForce GTX 760/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 364.72' **Blender Version** Broken: 2.78 Worked: (optional) **Short description of error** 2d stabilize keys not visible in the Graph Editor and Dope Sheet **Exact steps for others to reproduce the error** To make the new features of the 2d stabilizer work, some settings can be animated, like the 'influence' of location, scale and rotation. But if a key is set, it doesn't show up in the Graph Editor nor the Dope Sheet, like for example a key that is set in the compositor. ![2d-stabilize-keys-not-visible.jpg](https://archive.blender.org/developer/F373917/2d-stabilize-keys-not-visible.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha
Sergey Sharybin self-assigned this 2016-10-05 10:21:43 +02:00

This issue was referenced by 8e80d2741d

This issue was referenced by 8e80d2741deaa919a62e6e1677c0520332792698

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @SeanKennedy

Added subscriber: @SeanKennedy
Author

@sergey. Thank you very much!
Is it possible to include this fix in the upcoming 2.78a release?

@sergey. Thank you very much! Is it possible to include this fix in the upcoming 2.78a release?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49571
No description provided.