Fix T49571: 2d stabilize keys not visible in the Graph Editor and Dope Sheet