source/blender/makesdna/DNA_movieclip_types.h
@@ -146,6 +146,7 @@ enum {
 	MCLIP_USE_PROXY               = (1 << 0),
 	MCLIP_USE_PROXY_CUSTOM_DIR    = (1 << 1),
 	/* MCLIP_CUSTOM_START_FRAME    = (1<<2), */ /* UNUSED */
+	MCLIP_DATA_EXPAND             = (1 << 3),
 
 	MCLIP_TIMECODE_FLAGS          =  (MCLIP_USE_PROXY | MCLIP_USE_PROXY_CUSTOM_DIR)
 };
